--- a/index.html
+++ b/index.html
@@ -1,133 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Dario Marino – CV</title>
-    <style>
-        body {
-            font-family: Georgia, serif;
-            line-height: 1.6;
-            margin: 0 auto;
-            max-width: 800px;
-            padding: 40px 20px;
-            color: #333;
-        }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 0.1em;
-        }
-        h2 {
-            border-bottom: 1px solid #ccc;
-            margin-top: 2em;
-            font-size: 1.5em;
-        }
-        h3 {
-            margin-bottom: 0.2em;
-        }
-        ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-        li {
-            margin-bottom: 1em;
-        }
-        a {
-            color: #004080;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Dario Marino — CV</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@300;400&display=swap" rel="stylesheet">
+  <style>
+    body { font-family:'Libre Franklin', sans-serif; margin:0; padding-top:60px; line-height:1.6;}
+    header { position:fixed; top:0; width:100%; background:#fff; border-bottom:1px solid #eee; height:60px; display:flex; align-items:center; justify-content:center; z-index:100;}
+    nav a { margin:0 15px; color:#333; text-decoration:none; font-weight:400;}
+    .container { max-width:700px; margin:0 auto; padding:20px;}
+    section { margin-bottom:40px;}
+    section h2 { border-bottom:2px solid #ddd; padding-bottom:5px; margin-bottom:15px;}
+    ul { list-style:none; padding-left:0;}
+    ul li { margin-bottom:8px;}
+    a.contact { color:#0066cc; text-decoration:none; }
+  </style>
 </head>
 <body>
-    <h1>Dario Marino</h1>
-    <p>
-        Graduate Student, University of Chicago<br>
-        6022 S. Drexel Ave, Chicago, IL 60637<br>
-        (+1) 773 851 6143 · <a href="mailto:dariomarino@uchicago.edu">dariomarino@uchicago.edu</a><br>
-        <a href="https://dario-marino.github.io">Website</a> · <a href="https://github.com/dario-marino">GitHub</a> · <a href="https://linkedin.com/in/dario-f-marino">LinkedIn</a>
-    </p>
+  <header>
+    <nav>
+      <a href="#education">Education</a>
+      <a href="#research">Research</a>
+      <a href="#teaching">Teaching</a>
+      <a href="#experience">Experience</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <h2>Education</h2>
-    <ul>
-        <li>
-            <strong>University of Chicago</strong>, MACSS-Econ, Aug 2024 – Jun 2026<br>
-            GPA: 3.7 · Thesis: <em>Of Rivalry and Synergy</em> · Supervisor: Ufuk Akcigit
-        </li>
-        <li>
-            <strong>University of Bologna</strong>, BSc Mathematics, Sep 2023 – Jul 2024<br>
-            Courses: Probability, Stochastic Processes, Real Analysis, Graph Theory
-        </li>
-        <li>
-            <strong>Paris School of Economics</strong>, APE M2, Sep 2022 – Jun 2023<br>
-            GPA: 3.4 · Thesis: <em>Balanced Innovation</em> · Supervisor: Francis Bloch
-        </li>
-        <li>
-            <strong>Université Paris 1 – Panthéon Sorbonne</strong>, PSME M1, Sep 2021 – Jun 2022<br>
-            GPA: 3.7 · Thesis: <em>The Overlook Effect of Prices</em> · Supervisor: Carmen Camacho
-        </li>
-        <li>
-            <strong>University of Bologna</strong>, BA Political Science, Sep 2018 – Dec 2021<br>
-            GPA: 4.0 (110/110 with Honours) · Thesis: <em>The Effects of Automation</em>
-        </li>
-    </ul>
+  <div class="container">
+    <section id="education">
+      <h2>Education</h2>
+      <ul>
+        <li><strong>UChicago</strong>, MACSS‑Econ, Aug 2024 – Jun 2026, GPA 3.7</li>
+        <li><strong>Bologna</strong>, BSc Mathematics, Sep 2023 – Jul 2024, …</li>
+        <!-- Continue each item -->
+      </ul>
+    </section>
 
-    <h2>Research Experience</h2>
-    <ul>
-        <li>
-            <strong>Knowledge Lab (UChicago)</strong>, RA, Jun – Oct 2026<br>
-            Patent-to-product NLP, ChatGPT API, NSF-funded project with Akcigit Research Team
-        </li>
-        <li>
-            <strong>Akcigit Research Team (UChicago)</strong>, RA, Dec 2024 – Jun 2026<br>
-            BERT-based patent similarity analysis, citation-based disruption scores
-        </li>
-        <li>
-            <strong>Structural Change and Global Dynamics</strong>, Fellow, May 2023 – Sep 2024<br>
-            R, Python, webscraping on Orbis firm data, EU grant research at Bologna
-        </li>
-        <li>
-            <strong>Bocconi University</strong>, RA, Nov 2022 – Mar 2023<br>
-            Web scraping + sentiment analysis on EU legislation (Python & R)
-        </li>
-    </ul>
+    <section id="research">
+      <h2>Research Experience</h2>
+      <ul>
+        <li><strong>Knowledge Lab, UChicago</strong> (Jun 2026 – Oct 2026): …</li>
+        <!-- continue -->
+      </ul>
+    </section>
 
-    <h2>Work in Progress</h2>
-    <p>
-        Marino, Dario & Rossi, Nicola (2025). “La cultura economica,” in <em>Un miracolo non fa il santo 2</em>, IBL Libri.
-    </p>
+    <section id="teaching">
+      <h2>Teaching Experience</h2>
+      <ul>
+        <li><strong>UChicago TA</strong>, Economic Analysis of Law (Aug 2024 – Jan 2025)</li>
+        <!-- continue -->
+      </ul>
+    </section>
 
-    <h2>Teaching Experience</h2>
-    <ul>
-        <li>
-            <strong>University of Chicago</strong>, TA, Sep 2024 – Jan 2025<br>
-            Course: Economic Analysis of Law (Public Policy Studies)
-        </li>
-        <li>
-            <strong>University of Bologna</strong>, TA, Aug 2023 – Jul 2024<br>
-            Courses: Monetary Policy, Public Economics, Statistics, Econometrics, Competition, Programming
-        </li>
-    </ul>
+    <section id="experience">
+      <h2>Organizational Experience & Awards</h2>
+      <ul>
+        <li>Think‑tank content creator…</li>
+        <li><strong>Mercatus Fellowship</strong> (2024‑2026)</li>
+        <!-- continue -->
+      </ul>
+    </section>
 
-    <h2>Honors & Awards</h2>
-    <ul>
-        <li>Er.Go Scholarship (2018–2021)</li>
-        <li>Crous Scholarship (2022–2023)</li>
-        <li>Maroon Research Scholarship, UChicago (2024–2026)</li>
-        <li>Mercatus Don Lavoie Fellowship (2024–2025)</li>
-        <li>Mercatus Frédéric Bastiat Fellowship (2025–2026)</li>
-    </ul>
-
-    <h2>Skills & Certifications</h2>
-    <ul>
-        <li><strong>Languages:</strong> English (TOEFL: R28/L29/S27/W27), French (University Courses)</li>
-        <li><strong>GRE:</strong> Q160 / V159 (Sep 2022)</li>
-        <li><strong>Programming:</strong> Python (Spyder), R (RStudio), STATA, MATLAB, Mathematica</li>
-    </ul>
-
-    <h2>References</h2>
-    <ul>
-        <li>Ufuk Akcigit – UChicago · <a href="mailto:uakcigit@uchicago.edu">uakcigit@uchicago.edu</a></li>
-        <li>Francis Bloch – PSE · <a href="mailto:francis.bloch@psemail.eu">francis.bloch@psemail.eu</a></li>
-        <li>Angelo Secchi – PSE · <a href="mailto:angelo.secchi@univ-paris1.fr">angelo.secchi@univ-paris1.fr</a></li>
-    </ul>
+    <section id="contact">
+      <h2>Contact</h2>
+      <ul>
+        <li><a class="contact" href="mailto:dariomarino@uchicago.edu">dariomarino@uchicago.edu</a></li>
+        <li><a class="contact" href="https://www.linkedin.com/in/dario-f-marino/">LinkedIn</a></li>
+        <li><a class="contact" href="https://github.com/dario-marino">GitHub</a></li>
+        <li>Chicago, IL | +1 773 851 6143</li>
+      </ul>
+    </section>
+  </div>
 </body>
 </html>
