--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </a>
     <a href="https://x.com/EconDarioMarino" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/24/733/733579.png" alt="X" />
-      X
+      Twitter
     </a>
   </div>
 
