--- a/index.html
+++ b/index.html
@@ -1,72 +1,34 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Dario Marino</title>
-  <!-- Dark mode toggle element -->
-  <script type="module" src="https://unpkg.com/dark-mode-toggle"></script> <!-- adds <dark-mode-toggle> component :contentReference[oaicite:1]{index=1} -->
   <style>
-    :root {
-      --bg-light: #ffffff;
-      --text-light: #111111;
-      --bg-dark:  #111111;
-      --text-dark: #eeeeee;
-    }
-    html[data-theme="light"] {
-      background: var(--bg-light);
-      color: var(--text-light);
-    }
-    html[data-theme="dark"] {
-      background: var(--bg-dark);
-      color: var(--text-dark);
-    }
-    body {
-      margin: 0;
-      padding: 2rem 1rem;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      line-height: 1.6;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    a { color: inherit; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-    .topbar {
-      width: 100%;
-      max-width: 760px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 2rem;
-    }
-    .links a { margin-left: 1rem; display: inline-flex; align-items: center; }
-    .links img { width: 24px; height: 24px; margin-right: 0.25rem; }
-    .profile {
-      width: 160px;
-      border-radius: 50%;
-      margin-bottom: 1rem;
-    }
-    section { max-width: 760px; margin-bottom: 2rem; }
-    h1 { margin-bottom: 0.5rem; font-size: 2rem; }
-    h2 { margin-bottom: 0.5rem; font-size: 1.25rem; }
+    body, h1, h2, p, a { margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; }
+    body { padding: 2rem 1rem; max-width: 760px; margin: auto; line-height: 1.6; color: #111; background: #fff; }
+    .topbar { display: flex; justify-content: flex-end; gap: 1rem; margin-bottom: 2rem; }
+    .topbar a { display: inline-flex; align-items: center; gap: 0.25rem; color: inherit; text-decoration: none; }
+    .topbar img { width: 24px; height: 24px; }
+    header { text-align: center; margin-bottom: 2rem; }
+    .profile { width: 160px; border-radius: 50%; margin-bottom: 1rem; }
+    section { margin-bottom: 2rem; }
+    h1 { font-size: 2rem; margin-bottom: 0.5rem; }
+    h2 { font-size: 1.25rem; margin-bottom: 0.5rem; }
     ul { padding-left: 1.2em; }
   </style>
 </head>
 <body>
   <div class="topbar">
-    <dark-mode-toggle></dark-mode-toggle>
-    <div class="links">
-      <a href="https://www.linkedin.com/in/dario-f-marino" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn">LinkedIn
-      </a>
-      <a href="https://github.com/dario-marino" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/733/733553.png" alt="GitHub">GitHub
-      </a>
-      <a href="https://x.com/EconDarioMarino" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/24/733/733579.png" alt="Twitter">Twitter
-      </a>
-    </div>
+    <a href="https://www.linkedin.com/in/dario-f-marino" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/174/174857.png" alt="LinkedIn">LinkedIn
+    </a>
+    <a href="https://github.com/dario-marino" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/733/733553.png" alt="GitHub">GitHub
+    </a>
+    <a href="https://x.com/EconDarioMarino" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/24/733/733579.png" alt="X">X
+    </a>
   </div>
 
   <header>
@@ -75,27 +37,19 @@
     <p>Graduate Student, MACSS‑Econ · University of Chicago</p>
   </header>
 
+  <nav>
+    <a href="index.html">About</a> |
+    <a href="research.html">Research</a>
+  </nav>
+
   <section id="about">
     <h2>About</h2>
     <p>
-      I am Dario Marino, a Graduate Student in the MACSS‑Econ program at the University of Chicago. My research focuses on Innovation, using NLP methods and Applied Microeconometric techniques. Theoretical frameworks I rely on include Industrial Organization and Network Economics.
+      I'm Dario Marino, a graduate student in the MACSS‑Econ program at the University of Chicago. My research applies NLP methods and applied microeconometric techniques to innovation, drawing on theoretical frameworks from industrial organization and network economics.
+    </p>
+    <p>
+      You can find my <a href="Dario Marino-CV.pdf" target="_blank">CV here</a>.
     </p>
   </section>
-
-  <section id="research" style="display:none">
-    <h2>Research</h2>
-    <p><strong>WORK IN PROGRESS</strong></p>
-    <ul>
-      <li>
-        Dario Marino and Nicola Rossi (Università Tor Vergata), “La cultura economica,” in <em>Un miracolo non fa il santo. 2. La cultura degli italiani</em>, edited by Nicola Rossi, IBL Libri, 2025.
-      </li>
-    </ul>
-  </section>
-
-  <footer>
-    <button onclick="document.getElementById('research').style.display = 'block'; this.style.display = 'none'">
-      Show research →
-    </button>
-  </footer>
 </body>
 </html>
