--- a/research.html
+++ b/research.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Research · Dario Marino</title>
-  <style>
-    /* reuse the same styles */
-  </style>
-</head>
+<head><!-- same head --></head>
 <body>
   <div class="topbar">
-    <!-- same social links -->
+    <!-- same LinkedIn/GitHub links -->
+    <a href="https://x.com/EconDarioMarino" target="_blank">
+      <img src="https://about.x.com/brand-toolkit/assets/X_Logo/brandkit_logo_x_black.svg" alt="X">X
+    </a>
   </div>
 
   <header>
@@ -24,9 +20,7 @@
   </header>
 
   <footer>
-    <nav>
-      <a href="index.html">About</a>
-    </nav>
+    <nav><a href="index.html">About</a></nav>
   </footer>
 </body>
 </html>
