--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <a href="https://github.com/dario-marino" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/24/733/733553.png" alt="GitHub">GitHub
     </a>
-    <a href="https://x.com/EconDarioMarino" target="_blank">
-      <img src="https://freepnglogo.com/image/twitter-x-icon-png" alt="X">X
-    </a>
+  <a href="https://x.com/EconDarioMarino" target="_blank">
+   <img src="X-logo.png" alt="X" style="width:24px; height:24px;">
+  X
+</a>
   </div>
 
   <header>
