--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
       <img src="https://cdn-icons-png.flaticon.com/24/733/733553.png" alt="GitHub">GitHub
     </a>
 <a href="https://x.com/EconDarioMarino" target="_blank">
-  <img src="X-logo.png" alt="X" style="width:24px; height:24px;">
+  <img src="https://en.wikipedia.org/wiki/Twitter#/media/File:X_logo_2023.svg" alt="X" style="width:24px; height:24px;">
   X
 </a>
+
   </div>
 
   <header>
