--- a/index.html
+++ b/index.html
@@ -2,17 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dario Marino</title>
   <style>
-    body, h1, h2, p, a { margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; }
-    body { padding: 2rem 1rem; max-width: 760px; margin: auto; line-height: 1.6; color: #111; background: #fff; }
-    .topbar { display: flex; justify-content: flex-end; gap: 1rem; margin-bottom: 2rem; }
-    .topbar a { display: inline-flex; align-items: center; gap: 0.25rem; color: inherit; text-decoration: none; }
-    .topbar img { width: 24px; height: 24px; }
-    header { text-align: center; margin-bottom: 2rem; }
-    .profile { width: 160px; border-radius: 50%; margin-bottom: 1rem; }
-    section { margin-bottom: 2rem; }
+    body, h1, h2, p, a {
+      margin: 0; padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    }
+    body {
+      padding: 2rem 1rem;
+      max-width: 760px;
+      margin: auto;
+      line-height: 1.6;
+      color: #111;
+      background: #fff;
+    }
+    .topbar {
+      display: flex;
+      justify-content: flex-end;
+      gap: 1rem;
+      margin-bottom: 2rem;
+    }
+    .topbar a {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.25rem;
+      color: inherit;
+      text-decoration: none;
+    }
+    .topbar img {
+      width: 24px;
+      height: 24px;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+    .profile {
+      width: 160px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+    nav {
+      margin-bottom: 2rem;
+    }
+    section {
+      margin-bottom: 2rem;
+    }
     h1 { font-size: 2rem; margin-bottom: 0.5rem; }
     h2 { font-size: 1.25rem; margin-bottom: 0.5rem; }
     ul { padding-left: 1.2em; }
@@ -26,11 +62,9 @@
     <a href="https://github.com/dario-marino" target="_blank">
       <img src="https://cdn-icons-png.flaticon.com/24/733/733553.png" alt="GitHub">GitHub
     </a>
-<a href="https://x.com/EconDarioMarino" target="_blank">
-  <img src="https://en.wikipedia.org/wiki/Twitter#/media/File:X_logo_2023.svg" alt="X" style="width:24px; height:24px;">
-  X
-</a>
-
+    <a href="https://x.com/EconDarioMarino" target="_blank">
+      <img src="X_logo_2023.svg.webp" alt="X">X
+    </a>
   </div>
 
   <header>
