--- a/research.html
+++ b/research.html
@@ -18,7 +18,7 @@
     <p><strong>WORK IN PROGRESS</strong></p>
     <ul>
       <li>
-        Dario Marino and Nicola Rossi (Università Tor Vergata), “La cultura economica,” in <em>Un miracolo non fa il santo. 2. La cultura degli italiani</em>, edited by Nicola Rossi, IBL Libri, 2025.
+        Dario Marino and Nicola Rossi (Rome Tor Vergata University), Chapter 6 - “Economic Culture,” in <em>Un miracolo non fa il santo, la cultura degli italiani</em>, edited by Nicola Rossi, IBL Libri, 2025.
       </li>
     </ul>
   </header>
